# SDLExample

./: .gitignore  CMakeLists.txt  README.md  ru.kotdath.SDLExample.desktop
qml/cover/: DefaultCoverPage.qml
qml/pages/: AboutPage.qml  MainPage.qml
rpm/: ru.kotdath.SDLExample.spec
src/: main.cpp
translations/: SDLExample-en.ts  SDLExample-ru.ts
